--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,4 @@
-body{
-    background-image: url(image/shaqra.jpg);
-    background-repeat:no-repeat;
-    background-position:top right;
-    background-attachment:fixed;
-
-}
+          h1 {
+              color:blue
+                  
+          }
